add_executable(point_index point_index.cc)
target_link_libraries(point_index LINK_PUBLIC s2testing s2)
add_executable(term_index term_index.cc)
target_link_libraries(term_index LINK_PUBLIC s2testing s2)
add_executable(pegasus_test pegasus_test.cc)
target_link_libraries(pegasus_test LINK_PUBLIC s2testing s2)